--- a/elementsofstyle2.html
+++ b/elementsofstyle2.html
@@ -363,7 +363,7 @@ class="math inline">\(x\in S\)</span>.” If you just say something like
 “<span class="math inline">\(y=x^2\)</span> where <span
 class="math inline">\(x\in S\)</span>,” the word “where” does not
 indicate whether you mean “for all” or “some”.</p>
-<p>Phrases indicating the quantifier “for all” include “Let <span
+<p>Phrases indicating the quantifier “for all” include “Assume <span
 class="math inline">\(x\in S\)</span>”; “for all <span
 class="math inline">\(x\in S\)</span>”; “for every <span
 class="math inline">\(x\in S\)</span>”; “for each <span
@@ -372,11 +372,11 @@ quantifier “some” or “there exists”) include “for some <span
 class="math inline">\(x\in S\)</span>”; “there exists an <span
 class="math inline">\(x\in S\)</span>”; “for a suitable choice of <span
 class="math inline">\(x\in S\)</span>”; etc.</p>
-<p>Once you have said “Let <span class="math inline">\(x\in S\)</span>,”
-the letter <span class="math inline">\(x\)</span> has its meaning
-defined. You do not need to say “for all <span
+<p>Once you have said “Assume <span class="math inline">\(x\in
+S\)</span>,” the letter <span class="math inline">\(x\)</span> has its
+meaning defined. You do not need to say “for all <span
 class="math inline">\(x\in S\)</span>” again, and you definitely should
-<em>not</em> say “let <span class="math inline">\(x\in S\)</span>”
+<em>not</em> say “assume <span class="math inline">\(x\in S\)</span>”
 again.</p></li>
 <li><p><strong>Use a symbol to mean only one thing.</strong> Once you
 use the letter <span class="math inline">\(x\)</span> once, its meaning
